fix(bootstrap): 修复无法加载类的问题
修复缓存存放位置错误导致的无法加载类的原因
注意版本启动要使用war包